Day 8 - If this ever returns I might want to rewrite this

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "/Fe:",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "${file}",
-                "/std:c++17"
+                "/std:c++latest"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
