--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,13 @@
         "unordered_map": "cpp",
         "xhash": "cpp",
         "xtree": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "chrono": "cpp",
+        "deque": "cpp",
+        "execution": "cpp",
+        "mutex": "cpp",
+        "queue": "cpp",
+        "ratio": "cpp",
+        "thread": "cpp"
     }
 }
