--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "queue": "cpp",
         "ratio": "cpp",
         "thread": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "sstream": "cpp"
     }
 }
